[gd_scene load_steps=5 format=3 uid="uid://cv5mlj6la2cw6"]

[ext_resource type="Script" path="res://weapons/shotgun/shotgun.gd" id="1_pyvet"]
[ext_resource type="Texture2D" uid="uid://ch5qurovs508q" path="res://weapons/shotgun/shotgun_icon.png" id="2_1yoj7"]
[ext_resource type="Texture2D" uid="uid://dvpqs4dayer11" path="res://icon.svg" id="2_vhs7u"]
[ext_resource type="AudioStream" uid="uid://bhqv7lnryw8nq" path="res://weapons/audio/shotgun_shoot.ogg" id="3_rhvcj"]

[node name="Shotgun" type="Node2D"]
script = ExtResource("1_pyvet")
icon_image = ExtResource("2_1yoj7")
weapon_name = "Shotgun"
weapon_description = "Fires spread bullets"
shoot_sound = ExtResource("3_rhvcj")

[node name="BulletSpawns" type="Node2D" parent="."]

[node name="BulletSpawn1" type="Marker2D" parent="BulletSpawns"]
position = Vector2(11, -1)
rotation = -0.0872665

[node name="Sprite2D" type="Sprite2D" parent="BulletSpawns/BulletSpawn1"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_vhs7u")

[node name="BulletSpawn2" type="Marker2D" parent="BulletSpawns"]
position = Vector2(11, 1)
rotation = 0.0872665

[node name="Sprite2D2" type="Sprite2D" parent="BulletSpawns/BulletSpawn2"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_vhs7u")

[node name="BulletSpawn3" type="Marker2D" parent="BulletSpawns"]
position = Vector2(10, -4)
rotation = -0.349066

[node name="Sprite2D" type="Sprite2D" parent="BulletSpawns/BulletSpawn3"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_vhs7u")

[node name="BulletSpawn4" type="Marker2D" parent="BulletSpawns"]
position = Vector2(10, 4)
rotation = 0.349066

[node name="Sprite2D2" type="Sprite2D" parent="BulletSpawns/BulletSpawn4"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_vhs7u")

[node name="BulletSpawn5" type="Marker2D" parent="BulletSpawns"]
position = Vector2(8, -6)
rotation = -0.785398

[node name="Sprite2D" type="Sprite2D" parent="BulletSpawns/BulletSpawn5"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_vhs7u")

[node name="BulletSpawn6" type="Marker2D" parent="BulletSpawns"]
position = Vector2(8, 6)
rotation = 0.785398

[node name="Sprite2D2" type="Sprite2D" parent="BulletSpawns/BulletSpawn6"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_vhs7u")

[node name="ExtraBulletSpawn" type="Node2D" parent="."]

[node name="BulletSpawn5" type="Marker2D" parent="ExtraBulletSpawn"]
position = Vector2(6, -7)
rotation = -1.309

[node name="Sprite2D" type="Sprite2D" parent="ExtraBulletSpawn/BulletSpawn5"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_vhs7u")

[node name="BulletSpawn6" type="Marker2D" parent="ExtraBulletSpawn"]
position = Vector2(6, 7)
rotation = 1.309

[node name="Sprite2D2" type="Sprite2D" parent="ExtraBulletSpawn/BulletSpawn6"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("2_vhs7u")

[node name="ShootSpeedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ShootSpeedTimer" to="." method="_on_shoot_speed_timer_timeout"]
